# eddie2

./: .gitignore  Coding Guideline  PRD  PRD.md  PRD_OLD.md  README.md  UIUX_SPEC.md  UIUX_SPEC_OLD.md  pubspec.yaml
android/app/: build.gradle.kts
docs/: CHANGELOG.md  CONTRIBUTING.md  FAQ.md  FEEDBACK.md  GLOSSARY.md  INDEX.md  MAINTENANCE.md  QUALITY.md  README.md  ROADMAP.md
docs/prd/: EDDIE_PRD_AUTH.md  EDDIE_PRD_FEATURES.md  EDDIE_PRD_MAIN.md  EDDIE_PRD_VERSIONS.md
docs/uiux/: EDDIE_UIUX_DESIGN_SYSTEM.md  EDDIE_UIUX_INTERACTIONS.md  EDDIE_UIUX_SPEC_MAIN.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: firebase_options.dart  main.dart
lib/l10n/: app_en.arb  app_ko.arb
lib/models/: chat.dart  chat.g.dart  message.dart  message.g.dart  project.dart  project.g.dart  qa_pair.dart  qa_pair.g.dart  user.dart  user.g.dart
lib/providers/: auth_provider.dart  chat_provider.dart  locale_provider.dart  navigation_provider.dart  project_provider.dart  qa_provider.dart  settings_provider.dart
lib/screens/: all_chats_screen.dart  all_qa_pairs_screen.dart  chat_screen.dart  chat_screen_backup.dart  landing_screen.dart  login_screen.dart  main_screen.dart  main_screen_rename_method.dart  project_screen.dart  qa_screen.dart  settings_screen.dart  signup_screen.dart
lib/services/: auth_service.dart  file_service.dart  ocr_service.dart  openai_service.dart  pdf_service.dart  storage_service.dart
lib/theme/: eddie_colors.dart  eddie_constants.dart  eddie_design_system.dart  eddie_text_styles.dart  eddie_theme.dart  eddie_theme_example.dart  eddie_theme_extension.dart  theme_provider.dart
lib/utils/: theme.dart  validation_utils.dart
lib/widgets/: api_key_form.dart  app_logo.dart  chat_input.dart  chat_list_item.dart  eddie_button.dart  eddie_logo.dart  eddie_outlined_button.dart  eddie_text_field.dart  eddie_theme_toggle.dart  message_bubble.dart  new_chat_button.dart  project_sidebar_section.dart  qa_list_item.dart  qa_pair_card.dart  qa_pair_form.dart  sidebar_item.dart  sidebar_section.dart  (+2 more)
linux/: CMakeLists.txt
linux/runner/: CMakeLists.txt  my_application.cc
test/: widget_test.dart
tools/: README.md  delete_user.dart  delete_user.py  delete_user.sh
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+7 files in other folders)
